--- a/backend/Django_backend_project/templates/game_logic_app/game_ui.htm
+++ b/backend/Django_backend_project/templates/game_logic_app/game_ui.htm
@@ -16,6 +16,8 @@
 </head>
 <body>
     <div class="container text-center mt-5">
+		<div id="profile">
+			<button id="return"><a href="{% url 'register' %}">Profile</a></button>
         <h1>Pong Game</h1>
         <canvas id="gameCanvas" width="800" height="400"></canvas>
         <div id="buttons">
