Architechture redesign, backend set as only source of authority , new test file added , pong.js and gamelogic.js

--- a/backend/Django_backend_project/templates/game_logic_app/game_ui.htm
+++ b/backend/Django_backend_project/templates/game_logic_app/game_ui.htm
@@ -33,7 +33,7 @@
 
 
     {% load static %}
-    <script src="{% static 'js/game.js' %}"></script>
+    <script src="{% static 'js/pong.js' %}"></script>
 
 </body>
 </html>
